--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -5,6 +5,7 @@
     General Styles used on every website (Don't Repeat Yourself)
 */
 
+
 #light{
     background-color: #a3c6f4;
 }
@@ -40,4 +41,10 @@
 
 .card {
     border-radius: 10px;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    
 }
