--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -48,3 +48,14 @@
     border: 1px solid rgba(209, 213, 219, 0.3);
     
 }
+
+
+.btn-plus:hover {
+    background-color: rgb(36, 104, 183);
+  }
+  
+  .fa-plus {
+    font-size: small;
+    margin-left: 4px;
+  }
+  
