--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -87,10 +87,10 @@
 
   .garageImageLanding {
 
-    max-width: 350px;
-    max-height: 250px;
+    max-width: 300px;
+    max-height: 300px;
     margin-top: -140px;
-    margin-left: -40px;
+    
     position: relative;
     float: left;
     border-radius: 10%;
@@ -123,3 +123,69 @@
 
 }
 
+
+.imgCarousel {
+object-fit: contain;
+border-radius: 12px;
+}
+
+
+.flip-card {
+  background-color: transparent;
+  max-width: 350px;
+  height: 210px;
+  perspective: 1000px;
+  border-radius: 12px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 12px;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 12px;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+  border-radius: 12px;
+  
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+  
+}
+
+.flip-card-back p {
+  font-size: medium;
+  
+}
+
+.link-hover:hover {
+  color:gray;
+}
