--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -5,9 +5,9 @@
     General Styles used on every website (Don't Repeat Yourself)
 */
 
-
 #light{
-    background-color: #a3c6f4;
+    background-color: #e1e5ea;
+    z-index: -2
 }
 
 #dark{
@@ -83,6 +83,7 @@
     background-color: white;
     border-radius: 12px;
     z-index: 0;
+    background-color: #2486c7;
   }
 
   .garageImageLanding {
@@ -188,4 +189,12 @@ border-radius: 12px;
 
 .link-hover:hover {
   color:gray;
+}
+
+
+.toolIcon{
+
+  z-index: -1;
+  font-size: medium;
+  position: absolute;
 }
