--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -7,7 +7,7 @@
 
 #light{
     background-color: #e1e5ea;
-    z-index: -2
+  
 }
 
 #dark{
@@ -82,7 +82,6 @@
 
     background-color: white;
     border-radius: 12px;
-    z-index: 0;
     background-color: #2486c7;
   }
 
@@ -105,24 +104,7 @@
  }
 
 
- .buttonGarage {
-    position: relative;
-    margin-bottom: -2px;
-    margin-right: -5px;
-
-
- }
-
-
- .toolIcon {
-   font-size: 10em;
-   position: relative;
-   z-index: 1;
-   
-
-   
-
-}
+ 
 
 
 .imgCarousel {
@@ -191,10 +173,10 @@ border-radius: 12px;
   color:gray;
 }
 
+.toolIcon {
+float: right;
 
-.toolIcon{
 
-  z-index: -1;
-  font-size: medium;
-  position: absolute;
 }
+
+
