--- a/src/front/styles/uploadproduct.css
+++ b/src/front/styles/uploadproduct.css
@@ -314,5 +314,10 @@
 
 
 .specialBox {
-  margin-left: -50px;
+  margin-left: -96px;
+  margin-bottom: 6rem;
+}
+
+.lasteditinput{
+  margin-bottom: -130px;
 }
