--- a/src/front/styles/configuration.css
+++ b/src/front/styles/configuration.css
@@ -153,3 +153,27 @@
         border-radius: 12px;
     }
 }
+
+
+.btnedit-avatar{
+    height: 50%;
+    font-size: 2rem;
+    margin-top: 4.2rem;
+    margin-left: 2rem;
+    background: none;
+    border: none;
+}
+
+.btn_pencil_avatar{
+    font-size: 2rem;
+    background-color: none;
+    background: none;
+    max-height: 5rem;
+    border-radius: 10px;
+    width: 5rem;
+
+}
+
+.btn_pencil_avatar:hover{
+    background-color: #2776ab;
+}
