falta las ubida de alguna imagen en la edicion, no se renderizan las imgs pero si se suben

--- a/src/front/styles/uploadproduct.css
+++ b/src/front/styles/uploadproduct.css
@@ -191,7 +191,7 @@
   .classmar{
     margin-right: 7rem!important;
     max-width: 85%;
-    margin-right: 10rem!important;
+    margin-right: 8.2rem!important;
   }
 
   .desc-container{
@@ -329,7 +329,8 @@
 
 .segundo{
   margin-left: 69px!important;
-
+}
 
 .desctext{
-  margin-left: 15rem;
+  margin-left: 15rem;   
+}
